simplified docker setup

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 PYTHON_ENV='development'
 WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
 LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
+DOWNLOAD_DELAY=1 # optional
 ICTRP_USER='<user>'  # optional
 ICTRP_PASS='<pass>'  # optional
 HRA_ENV='<STAGING/PRODUCTION>'  # optional
