--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -1,105 +1,141 @@
-# Prepare
-# scrape all data from register
-
 actrn:
   image: okibot/collectors
   command: make start actrn 2001-01-01
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
 
 euctr:
   image: okibot/collectors
   command: make start euctr 2001-01-01
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
 
 fdadl:
   image: okibot/collectors
   command: make start fdadl
+  restart: always
   environment:
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
 
 gsk:
   image: okibot/collectors
   command: make start gsk 2001-01-01
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
+
+hra:
+  image: okibot/collectors
+  command: make start hra
+  restart: always
+  environment:
+    PYTHON_ENV:
+    WAREHOUSE_URL:
+    LOGGING_URL:
+    HRA_ENV:
+    HRA_URL:
+    HRA_USER:
+    HRA_PASS:
 
 icdcm:
   image: okibot/collectors
   command: make start icdcm
+  restart: always
   environment:
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
 
 icdpcs:
   image: okibot/collectors
   command: make start icdpcs
+  restart: always
   environment:
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
 
 ictrp:
   image: okibot/collectors
   command: make start ictrp
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
     ICTRP_USER:
     ICTRP_PASS:
 
 isrctn:
   image: okibot/collectors
   command: make start isrctn 2001-01-01
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
 
 jprn:
   image: okibot/collectors
   command: make start jprn 1 100000
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
 
 nct:
   image: okibot/collectors
   command: make start nct 2001-01-01
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
 
 pfizer:
   image: okibot/collectors
   command: make start pfizer
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
 
 pubmed:
   image: okibot/collectors
   command: make start pubmed 1900-01-01 2100-01-01
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
 
 takeda:
   image: okibot/collectors
   command: make start takeda
+  restart: always
   environment:
-    DOWNLOAD_DELAY: 1
+    PYTHON_ENV:
     WAREHOUSE_URL:
     LOGGING_URL:
+    DOWNLOAD_DELAY:
