--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
 DOWNLOAD_DELAY=1 # optional
 ICTRP_USER='<user>'  # optional
 ICTRP_PASS='<pass>'  # optional
-HRA_ENV='<STAGING/PRODUCTION>'  # optional
+HRA_ENV='<staging/production>'  # optional
 HRA_URL='<url>'  # optional
 HRA_USER='<user>'  # optional
 HRA_PASS='<pass>'  # optional
