fixed env.example [skip ci]

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Dockerhost: ip route | awk '/docker0/ { print $NF }'
 PYTHON_ENV='development'
 WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
-TEST_WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
+TEST_WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database-test>'
 LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
 DOWNLOAD_DELAY=1 # optional
 ICTRP_USER='<user>'  # optional
