[#263] Rename fda_dap -> fdadap Docker Cloud name
Docker Cloud doesn't accept underscores.

--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -27,7 +27,7 @@ fdadl:
     WAREHOUSE_URL:
     LOGGING_URL:
 
-fda_dap:
+fdadap:
   image: okibot/collectors
   command: make start fda_dap
   # restart: always
