--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,3 +81,9 @@ takeda:
     service: takeda
     file: docker-cloud.yml
   restart: 'no'
+
+cochrane-reviews:
+  extends:
+    service: cochrane-reviews
+    file: docker-cloud.yml
+  restart: 'no'
