--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,7 @@ install:
   - psql -c 'create database opentrials_warehouse_test;' -U postgres
 
 script:
-  - make test
-  - make build
+  - make test && make build
 
 deploy:
   - provider: script
