--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # Export: set -a; source .env
 # Dockerhost: ip route | awk '/docker0/ { print $NF }'
-PYTHON_ENV='development'
-WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database>'
-TEST_WAREHOUSE_URL='postgres://<user>:<pass>@<host>:5432/<database-test>'
-LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
-DOWNLOAD_DELAY=1 # optional
-ICTRP_USER='<user>'  # optional
-ICTRP_PASS='<pass>'  # optional
-HRA_ENV='<staging/production>'  # optional
-HRA_URL='<url>'  # optional
-HRA_USER='<user>'  # optional
-HRA_PASS='<pass>'  # optional
+PYTHON_ENV=development
+WAREHOUSE_URL=postgres://<user>:<pass>@<host>:5432/<database>
+TEST_WAREHOUSE_URL=postgres://<user>:<pass>@<host>:5432/<database-test>
+# LOGGING_URL='<host>.papertrailapp.com:<port>'  # optional
+# DOWNLOAD_DELAY=1 # optional
+# ICTRP_USER='<user>'  # optional
+# ICTRP_PASS='<pass>'  # optional
+# HRA_ENV='<staging/production>'  # optional
+# HRA_URL='<url>'  # optional
+# HRA_USER='<user>'  # optional
+# HRA_PASS='<pass>'  # optional
