[#658] Setup tox and disable FDADAP tests
The FDADAP tests were disabled because I had issues with Betamax recognizing the
current cassettes we have, and couldn't simply remove them as the site
changed (i.e. the tests break). We'll have to fix the collector in the future
anyway, but there's no need to do this now.

opentrials/opentrials#658

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
     - TEST_WAREHOUSE_URL=postgres://postgres@localhost:5432/opentrials_warehouse_test
 
 install:
-  - make install
+  - pip install tox
   - psql -c 'create database opentrials_warehouse_test;' -U postgres
 
 script:
