[#421] Require only test databases to run tests
opentrials/opentrials#421

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,10 @@ deps =
   pytest
   mock
   betamax==0.8
+setenv =
+  PYTHON_ENV = testing
 passenv =
-  WAREHOUSE_URL DATABASE_URL EXPLORERDB_URL
+  TEST_WAREHOUSE_URL
 commands =
   py.test {posargs}
 
