[#660] Send exceptions to Sentry
I also did a few simplifications to the code.

opentrials/opentrials#660

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ TEST_WAREHOUSE_URL=postgres://<user>:<pass>@<host>:5432/<database-test>
 # HRA_URL='<url>'  # optional
 # HRA_USER='<user>'  # optional
 # HRA_PASS='<pass>'  # optional
+# SENTRY_DSN=''  # optional
